--- a/templates/base.html
+++ b/templates/base.html
@@ -3,10 +3,12 @@
     <meta charset="utf-8">
     <title>Our House</title>
 
-    <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/chartist/0.9.5/chartist.min.css" rel="stylesheet"> -->
+    <link href="../static/css/style.css" rel="stylesheet">
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/chartist/0.9.5/chartist.min.js"></script> -->
     <!-- <script src="https://cdnjs.com/libraries/chart.js"></script> -->
+    <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script type="text/javascript" src="https://www.google.com/jsapi"></script>
   </head>
 
   <body>
