--- a/templates/results.html
+++ b/templates/results.html
@@ -1,14 +1,11 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1>Household Heating</h1>
-
-<div id="forecast_data" style="width: 100%; height: 500px"></div>
 <script>
 google.charts.load('current', {packages: ['corechart', 'line']});
-google.charts.setOnLoadCallback(drawTemperature);
+google.charts.setOnLoadCallback(drawChart);
 
-function drawTemperature() {
+function drawChart() {
 
       var data = new google.visualization.DataTable();
       data.addColumn('datetime', 'X');
@@ -63,8 +60,17 @@ function drawTemperature() {
 
         var classicChart = new google.visualization.ComboChart(document.getElementById('forecast_data'));
         classicChart.draw(data, classicOptions);
-    }
+    };
 
+$(window).resize(function(){
+  drawChart();
+});
 </script>
+
+<div class="grid">
+  <div class="col-1-1">
+    <div id="forecast_data" class="chart"></div>
+  </div>
+</div>
 
 {% endblock %}
