--- a/templates/results.html
+++ b/templates/results.html
@@ -10,18 +10,23 @@ function drawChart() {
       var data = new google.visualization.DataTable();
       data.addColumn('datetime', 'X');
       data.addColumn('number', 'Heating');
+      data.addColumn('number', 'Outside Temp');
       data.addColumn('number', 'Temp Forecast');
 
       data.addRows([
+
         {% for row in heat_pump_data %}
-        [new Date('{{ row[0] }}'), {{ row[1] }}, null],
+        [new Date('{{ row[0] }}'), {{ row[1] }}, null, null],
+        {% endfor %}
+
+        {% for row in outside %}
+        [new Date('{{ row[0] }}'), null, {{ row[1] }}, null],
         {% endfor %}
 
         {% for row in forecast %}
-        [new Date('{{ row[0] }}'), null, {{ row[1] }}],
+        [new Date('{{ row[0] }}'), null, null, {{ row[1] }}],
         {% endfor %}
-        // [new Date('{{ now }}'), 0, null],
-        // [new Date('{{ now }}'), 1, null]
+
       ]);
 
       var classicOptions = {
@@ -32,6 +37,8 @@ function drawChart() {
           0: {targetAxisIndex: 0,
               type: 'area'},
           1: {targetAxisIndex: 1,
+              type: 'line'},
+          2: {targetAxisIndex: 1,
               type: 'line'}
         },
         vAxes: {
