added points to outside temp

--- a/templates/results.html
+++ b/templates/results.html
@@ -37,7 +37,8 @@ function drawChart() {
           0: {targetAxisIndex: 0,
               type: 'area'},
           1: {targetAxisIndex: 1,
-              type: 'line'},
+              type: 'line',
+              pointSize: 6},
           2: {targetAxisIndex: 1,
               type: 'line'}
         },
