update plot style

--- a/templates/results.html
+++ b/templates/results.html
@@ -37,8 +37,7 @@ function drawChart() {
           0: {targetAxisIndex: 0,
               type: 'area'},
           1: {targetAxisIndex: 1,
-              type: 'line',
-              pointSize: 0},
+              type: 'line'},
           2: {targetAxisIndex: 1,
               type: 'line'}
         },
