--- a/templates/results.html
+++ b/templates/results.html
@@ -35,7 +35,8 @@ function drawChart() {
         // Gives each series an axis that matches the vAxes number below.
         series: {
           0: {targetAxisIndex: 0,
-              type: 'area'},
+              type: 'area',
+              lineWidth: 0},
           1: {targetAxisIndex: 1,
               type: 'line'},
           2: {targetAxisIndex: 1,
